<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Parent project information -->
    <groupId>com.dsad</groupId>
    <artifactId>BrowserHistoryManager</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging> <!-- This is important as it signifies this is a parent project -->

    <modules>
        <!-- List of all the sub-modules -->
        <module>core</module>
        <module>cli</module>
        <module>gui</module>
        <module>driver</module>
    </modules>

    <!-- Properties for versions of plugins and JDK -->
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
</project>
